# key-b0x

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bundle-smoke.yml  ci.yml  release-tauri.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/electron/: configStore.ts  main.ts  preload.ts  runtimeService.ts
apps/desktop/shared/: model.test.ts  model.ts
apps/desktop/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: bindings.rs  config.rs  keyboard_test.rs  keyboard_test_controller.rs  lib.rs  platform.rs  profile.rs  runtime_controller.rs  runtime_loop.rs  setup.rs  state.rs  transport.rs
crates/core/: Cargo.toml
crates/core/src/: binding.rs  config.rs  coords.rs  engine.rs  lib.rs  socd.rs
crates/platform/: Cargo.toml
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: lib.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs
crates/platform/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  main.rs  platform.rs  profile.rs  transport.rs
docs/: architecture.md  getting-started.md  releasing.md
scripts/: generate_latest_json.py
