[workspace]
members = [
    "crates/core",
    "crates/platform-linux",
    "crates/runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Ari"]
repository = ""

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
dirs = "6.0.0"
evdev = "0.13.2"
nix = { version = "0.30.1", features = ["fs", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.3.18"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
