[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/app",
    "crates/core",
    "crates/platform",
    "crates/platform-linux",
    "crates/platform-windows",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Ari"]
repository = ""

[workspace.dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
evdev = "0.13.2"
nix = { version = "0.30.1", features = ["fs", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
tauri = "2.10.3"
tauri-build = "2.5.6"
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
